feat(katas): implement all 9 Feynman katas, dual local/gcp factory, and 180-node rag sync